fix: Text and gaps on sliders

--- a/src/layouts/templates/textwithslider/textbox/Textbox.module.sass
+++ b/src/layouts/templates/textwithslider/textbox/Textbox.module.sass
@@ -3,12 +3,12 @@
 .textbox
     display: flex
     flex-direction: column
-    row-gap: 48px
+    row-gap: 32px
     padding: 0 48px
 
     > p
         font-size: 1rem
         font-family: $font-aviano-flare
-        font-weight: normal
+        font-weight: 300
         line-height: 1.8
         color: $color-primary
