--- a/src/styles/swiper.sass
+++ b/src/styles/swiper.sass
@@ -1,3 +1,6 @@
 .swiper-button-prev,
 .swiper-button-next
     color: #ffffff !important
+
+.swiper-slide
+    margin: auto
